--- a/public/assets/CSS/style.css
+++ b/public/assets/CSS/style.css
@@ -14,6 +14,111 @@
   border:100px;
 }
 
+.biodata {
+  background-image: url("https://drive.google.com/uc?id=1WYI-zDvOOwOn_kLVo4YUZ6Eu8zTRU5Xq");
+  width: 950px;
+  height: 350px;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
+  margin: 20px auto;
+  padding: 40px;
+  padding-bottom: 10px;
+}
+
+*{
+  margin: 0;
+  padding: 0;
+
+  box-sizing: border-box;
+  font-family: sans-serif;
+
+}
+
+.databasetab{
+  min-height: 100vh;
+  background: url("https://drive.google.com/uc?id=1a1GJAtJIWqzzKqq4s513uKZm0-PyAiKB") center / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.databasetabd{
+  min-height: 100vh;
+  background: url("https://drive.google.com/uc?id=1kcigTQwb5jjUjRiZ33QmxnbivD08Qdnn") center / cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+main.table{
+  width: 82vw;
+  height: 80vh;
+  background-color: #fff5;
+  backdrop-filter:blur(7px);
+  box-shadow: 0 .4rem .8rem #0005;
+  border-radius: .8rem;
+
+  overflow: hidden;
+}
+
+table{
+  width: 100%;
+}
+
+
+.table__header{
+  width: 100%;
+  height: 10%;
+  background-color: #fff4;
+  padding: .8rem 1rem;
+}
+
+.table__body::-webkit-scrollbar{
+  width: 0.5rem;
+  height: 0.5rem;
+}
+
+.table__body::-webkit-scrollbar-thumb{
+  border-radius: .5rem;
+  background-color: #0004;
+  visibility: hidden;
+}
+.table__body:hover::-webkit-scrollbar-thumb{
+  visibility: hidden;
+}
+
+.table__body{
+  width: 95%;
+  max-height: calc(89% - .8rem);
+  background-color: #fffb;
+  margin: .8rem auto;
+  border-radius: .6rem;
+
+  overflow: auto;
+}
+
+table, th, td{
+  border-collapse: collapse;
+  padding: 1rem;
+
+}
+
+thead th{
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #d5d1de;
+}
+
+tbody tr:nth-child(even){
+  background-color: #0000000b;
+}
+
+tbody tr:hover{
+  background-color: #fff6;
+}
+
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 * {
   padding: 0;
@@ -138,3 +243,4 @@
 .box form input[type="submit"]:active {
   opacity: 0.8;
 } */
+
